<resources>
    <string name="app_name">New_Firebase</string>
    <string name="loginEmail">Enter Your Email</string>
    <string name="loginPassword">Enter Your Password</string>
    <string name="username">Enter Your Name</string>
    <string name="userEmail">Enter Your Email</string>
    <string name="userRoll">Enter Your Roll Number</string>
    <string name="studentRegistration">Student \nRegistration</string>
    <string name="newUser">New User ?</string>
    <string name="login">Login</string>
    <string name="next">Next</string>
    <string name="blank"></string>
    <string name="logout">Logout</string>
    <string name="courseDetails">Course Details</string>
    <string name="courseType">Select Course Type</string>
    <string name="semester">Select Semester</string>
    <string name="Register">Register</string>
    <string name="SubjectList">Subject List</string>
    <string name="backtologin">Already have an account ?</string>

    <string-array name="Year">
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
    </string-array>

    <string-array name="Paper_Name">
        <item>Mid Term 1</item>
        <item>Mid Term 2</item>
        <item>End Semester</item>
    </string-array>

</resources>