<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_page"
    tools:context=".RegisterUser">

    <TextView
        android:id="@+id/studentBanner"
        android:layout_width="298dp"
        android:layout_height="115dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="69dp"
        android:text="@string/studentRegistration"
        android:fontFamily="sans-serif-condensed"
        android:textAlignment="center"
        android:textColor="@color/blue_dark"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/registerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentBanner" />

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="52dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/blank"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerName" />

    <TextView
        android:id="@+id/rollNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="215dp"
        android:text="@string/userRoll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUsername" />

    <EditText
        android:id="@+id/editRoll"
        android:layout_width="307dp"
        android:layout_height="51dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="55dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/blank"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rollNumber" />

    <TextView
        android:id="@+id/registerEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="259dp"
        android:text="@string/loginEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editRoll" />

    <EditText
    android:id="@+id/editRegisterEmail"
    android:layout_width="307dp"
    android:layout_height="48dp"
    android:layout_marginStart="49dp"
    android:layout_marginTop="9dp"
    android:layout_marginEnd="55dp"
    android:ems="10"
    android:inputType="textEmailAddress"
    android:text="@string/blank"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/registerEmail" />

    <TextView
        android:id="@+id/registerPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="230dp"
        android:text="@string/loginPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editRegisterEmail" />

    <EditText
    android:id="@+id/editRegisterPassword"
    android:layout_width="304dp"
    android:layout_height="46dp"
    android:layout_marginStart="50dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="57dp"
    android:ems="10"
    android:inputType="textPassword"
    android:text="@string/blank"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/registerPass" />

    <Button
    android:id="@+id/registerButton"
    android:layout_width="111dp"
    android:layout_height="51dp" android:textColor="@color/white"
        android:background="@drawable/bottom_rounded_corners"
    android:layout_marginStart="152dp"
    android:layout_marginTop="31dp"
    android:layout_marginEnd="148dp"
    android:text="@string/Register"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.611"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/editRegisterPassword"
    app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/backtologin"
        android:layout_width="280dp"
        android:layout_height="54dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bottom_rounded_corners"
        android:text="@string/backtologin"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />
</androidx.constraintlayout.widget.ConstraintLayout>